# Oracle_healthcare-bio_sLLM

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
DAY1/: 01_raw_api.py  02_langchain_LLM_ChatOpenAI.py  03_langchain_LCEL_single.py  04_langchain_LCEL_Runnable_invoke.py  05_langchain_LCEL_Runnable_stream.py  06_langchain_LCEL_Runnable_batch.py  07_langchain_Prompt_PromptTemplate.py  08_langchain_Prompt_ChatPromptTemplate.py  09_langchain_Prompt_Fewshotprompttemplate.py  10_langchain_Prompt_Fewshotchatmessageprompttemplate.py  11_OutputParser_Stroutputparser.py  12_OutputParser_Commaseparatedlistoutputparser.py  13_OutputParser_Jsonoutputparser.py  14_OutputParser_PydanticOutputParser.py  15_langchain_LCEL_Multi.py  16_langchain_message_object.py  17_chatbot.py  assignment_chatbot.py  assignment_result_easy.md  concept_results_easy.json  day1_assignment_starter.py
DAY2/: 01_raw_documentLoader.py  02_DocumentLoader_TextLoader.py  03_DocumentLoader_CSVLoader.py  04-02_DocumentLoader_PyMuPDF.PY  04_DocumentLoader_PyPDFLoader.py  05_DocumentLoader_WebBaseLoader.py  06_raw_textSplitter.py  07_TextSplitter_CharacterTextSplitter.py  08_TextSplitter_RecursiveCharacterTextSplitter 2.py  09_TextSplitter_RecursiveCharacterTextSplitter_pdf.py  10_token_example.py  11_Textsplitter_Tokentextsplitter 2.py  12_Textsplitter_Tokentextsplitter_Korean_English 2.py  13_Textsplitter_Markdownheadertextsplitter 2.py  13_mission_recursive.py  14_Textsplitter_codesplitter 2.py  15_Textsplitter_Semanticchunker.py  16_Embedding_Openaiembeddings.py  17_Embedding_PDF_Pages 2.py  (+4 more)
(+109 files in other folders)
