[project]
name = "oracle-healthcare-bio-sllm"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=1.1.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langchain-mcp-adapters>=0.3.0",
    "langchain[openai]>=1.3.13",
    "langgraph>=1.2.9",
    "sse-starlette>=3.4.5",
    "uvicorn>=0.51.0",
]
